<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ºScramble Wordº</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_easy_mode_game">EasyModeGame</string>
    <string name="menu">Back</string>
    <string name="title_activity_normal_mode_game">NormalModeGame</string>
    <string name="title_activity_hard_mode_game">HardModeGame</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="play">Play</string>
    <string name="more">More</string>
    <string name="credits">Credits</string>
    <string name="credits_text">This Application was developed by CangaçoTeam®</string>
    <string name="choose_game_mode">Choose the difficult:</string>
    <string name="unscramble">Unscramble</string>
    <string name="congratulations">Congratulations</string>
    <string name="next">Next</string>
    <string name="facebook_share">Share on Facebook</string>
    <string name="shared">Your score has been shared on your Facebook wall</string>
    <string name="resume">Resume</string>
    <string name="audio">Audio</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="invite">Invite a friend</string>
    <string name="send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="invite_info">Type an e-mail to send the invite:</string>
    <string name="invite_sent">Invite sent</string>
    <string name="try_again">Try again</string>
    <string name="versus">Versus</string>
    <string name="title_activity_cliente">ClienteActivity</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="title_activity_mensagem">MensagemActivity</string>
    <string name="disconnect">Disconect</string>
    <string name="status">Status</string>
    <string name="connect">Connect</string>
    <string name="ip">IP</string>

</resources>