<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bt_play"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/bt_invite"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bt_play"
        android:layout_below="@+id/bt_play"
        android:text="@string/invite" />

    <Button
        android:id="@+id/bt_credits"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bt_invite"
        android:layout_below="@+id/bt_invite"
        android:text="@string/credits" />

</RelativeLayout>