<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <Button
        android:id="@+id/bt_easy"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/easy" />

    <Button
        android:id="@+id/bt_normal"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bt_easy"
        android:layout_below="@+id/bt_easy"
        android:text="@string/normal" />    
    
    <Button
        android:id="@+id/bt_hard"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bt_normal"
        android:layout_below="@+id/bt_normal"
        android:text="@string/hard" />   
        
    <ImageButton
        android:id="@+id/ib_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_launcher" />    

</RelativeLayout>